--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "csurf": "^1.11.0",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.3.0",
+    "express-validator": "^7.1.0",
+    "helmet": "^7.1.0",
     "socket.io": "^4.7.5"
   }
 }
