--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-rate-limit": "^7.3.0",
     "express-validator": "^7.1.0",
     "helmet": "^7.1.0",
+    "morgan": "^1.10.0",
     "socket.io": "^4.7.5"
   }
 }
