--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "csurf": "^1.11.0",
     "express": "^4.19.2",
     "express-rate-limit": "^7.3.0",
+    "express-session": "^1.18.0",
     "express-validator": "^7.1.0",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
